Refactor PrettyPrinterTest to use NodeMocker